@@ -1,4 +1,5 @@
 0.06
+ - Update Module::Install to 1.21 version.
 
 0.05 2023-02-10T21:55:25+01:00
  - Add tests with public_image_dir.
